<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/width_match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_height="match_parent"
    android:padding="@dimen/dp_16dp">

    <ImageView
        android:id="@+id/img_headsets"
        android:layout_width="@dimen/dp_36dp"
        android:layout_height="@dimen/dp_36dp"
        android:background="@drawable/bg_oval"
        android:backgroundTint="@color/ripple"
        android:scaleType="centerInside"
        android:src="@drawable/ic_round_headset_mic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@android:color/white" />

    <TextView
        android:id="@+id/tv_headset_warning"
        android:layout_width="@dimen/dp_0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center|start"
        android:paddingStart="@dimen/dp_16dp"
        android:text="@string/home_headset_disconnected_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dp_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_headsets"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry,SpUsage" />

    <LinearLayout
        android:id="@+id/ll_container_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_headset_warning">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/home_song_1"
            android:textColor="@color/home_song"
            android:textSize="@dimen/dp_22dp"
            android:textStyle="italic"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform"
            tools:ignore="SpUsage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/home_song_2"
            android:textColor="@color/home_song"
            android:textSize="@dimen/dp_22dp"
            android:textStyle="italic"
            tools:ignore="SpUsage" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_container_tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tv_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_container_song">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_32dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/home_tutorial_1"
            android:textColor="@android:color/white"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_28dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/home_tutorial_2"
            android:textColor="@android:color/white"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="end"
            android:text="@string/home_tutorial_3"
            android:textColor="@android:color/white"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_listening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recorder_notification_content_text"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dp_42dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tv_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_container_song"
        tools:ignore="SpUsage"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_debug_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_16dp"
        app:layout_constraintBottom_toTopOf="@id/tv_action"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_action"
        style="@style/App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16dp"
        android:text="@string/home_start"
        app:layout_constraintBottom_toTopOf="@id/tv_navigate_to_reports"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_navigate_to_reports"
        style="@style/App.Button.Secondary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:text="@string/home_reports"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>