<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/width_match_parent"
    android:layout_height="match_parent"
    android:maxWidth="@dimen/max_width_for_tablets"
    android:padding="@dimen/dp_16dp">

    <LinearLayout
        android:id="@+id/ll_titles_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:maxWidth="@dimen/max_width_for_tablets"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:includeFontPadding="false"
            android:text="@string/splash_title_1"
            android:textColor="@android:color/white"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:fontFamily="sans-serif-light"
            android:gravity="end"
            android:includeFontPadding="false"
            android:text="@string/splash_title_2"
            android:textColor="@android:color/white"
            android:textStyle="italic"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="sans-serif-medium"
            android:includeFontPadding="false"
            android:text="@string/splash_title_3"
            android:textColor="@android:color/white"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/dp_32dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/splash_title_4"
            android:textColor="@android:color/white"
            app:autoSizeStepGranularity="1sp"
            app:autoSizeTextType="uniform" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_allow"
        style="@style/App.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/splash_allow"
        android:layout_marginBottom="@dimen/bottom_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:alpha="1" />

</androidx.constraintlayout.widget.ConstraintLayout>